# nmshd-bkb-data-dashboard

./: .dockerignore  .gitignore  Dockerfile  README.md  bench_parallel_reads.ipynb  bench_sqlalchemy_pool.ipynb  main.py  pyproject.toml
.github/workflows/: docker-build-publish.yml
dev/: bootstrap-mssql.Dockerfile  bootstrap-mssql.docker-compose.yml  load_bacpac.sh
docker/development/: Dockerfile  docker-compose.yml  load_bacpac.sh
docker/production/: Dockerfile  docker-compose.yml
src/: __init__.py  config.py  network.py  plotly_plots.py  queries.py
src/dashboard/: __init__.py
src/dashboard/pages/: datawallet_modifications.py  devices.py  files.py  identities.py  messages.py  relationship_templates.py  relationships.py  synchronization.py  tokens.py
src/dashboard/static/assets/: styles.css
src/dashboard/templates/: forcegraph.html
