[tool.poetry]
name = "backbone-data-analysis"
version = "0.1.0"
description = ""
authors = ["Stanislaw Hüll <stanislaw.huell@js-soft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
networkx = "^3.3"
dash = "^2.18.1"
sqlalchemy = "^2.0.36"
pyodbc = "^5.2.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.12.0"
pylint = "^3.3.1"
python-dotenv = "^1.0.1"
tqdm = "^4.66.6"
jupyter = "^1.1.1"
pymssql = "^2.3.1"
ipykernel = "^6.29.5"
plotnine = "^0.13.6"

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    'missing-function-docstring',
    'missing-class-docstring',
    'missing-module-docstring',
    'too-many-instance-attributes',
    'too-few-public-methods',
    'too-many-lines',
    'broad-exception-caught',
    'too-many-arguments',
    'too-many-locals',
    'missing-timeout',
    'unspecified-encoding',
    'broad-exception-raised',
    'invalid-name',
    'fixme',
]

[tool.mypy]
disable_error_code = ["import-untyped"]

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
